<resources>
    <string name="app_name">JeducaTest</string>

    <!-- Strings related to login -->
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Loguear</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_login">El usuario no existe en la base de datos</string>
    <string name="test_cea">Evaluación CEA</string>
    <string name="test_talleres">Evaluación de Talleres</string>
    <string name="accomplished">C</string>
    <string name="ready">Listo</string>
    <string name="close">Cerrar</string>
    <string name="test_closed">Evaluacion Cerrada</string>
    <string name="not_accomplished">NC</string>
    <string name="dont_apply">NA</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
